# digicloset

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  ASYNC_QUEUE_DEPLOYMENT_GUIDE.md  ASYNC_QUEUE_IMPLEMENTATION_SUMMARY.md  BEGINNER_LOCAL_SETUP.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile.celery  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  LOCAL_RUN_AND_GDPR.md  PHASE_3_ARCHITECTURE_IMPLEMENTATION.md  PRODUCTION_SECURITY_IMPLEMENTATION.md  QUICKSTART.md  QUICK_START_SECURITY.md  README.md  README_MIGRATION.md  REFACTORING_COMPLETE.md  REFACTORING_DELIVERABLES.md  REFACTORING_GUIDE.md  VIRTUAL_TRYON_IMPLEMENTATION.md  about.md  docker-compose.celery.yml  docker-compose.dev.yml  docker-compose.prod.yml  dockerignore_Version1.txt  eslint.config.js  index.html  index.js  local_verification.ps1  local_verification.sh  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  requirements-celery.txt  requirements.txt  (+8 more)
.codesandbox/: tasks.json
DIGICLOSET/: Chart.yaml  Dockerfile  README_BACKUP.md  README_CICD.md  hpa-backend.yaml  iam_integration_template.yaml  package-lock.json  package.json  restore-db.sh  sla_dashboard.json  validation_enterprise.js  vite.config.ts.timestamp-1765031040714-270af6535548e8.mjs
DIGICLOSET /: encryption-policy.yaml  graceful_shutdown.py  hpa-node.yaml  hpa-python.yaml  rate_limit.js
Digicloset-main (11)/: db_migrate.py  deployment-python.yaml  deployment.yaml  docker_build_push.sh  hpa-frontend.yaml
ai_service/: .env.example  BUILD_SUMMARY.md  BUILD_VERIFICATION.txt  SYSTEM_SUMMARY.md  main.py  (+3 more)
(+566 files in other folders)
